# handsfreed

./: README.md  example.config.toml  pyproject.toml  shell.nix
.github/workflows/: ci.yml  publish.yml
handsfreed/: audio_capture.py  config.py  ipc_models.py  ipc_server.py  main.py  output_handler.py  pipeline.py  pipeline_manager.py  pipelines.py  state.py  strategies.py  task_assembler.py  transcriber.py
handsfreed/segmentation/: __init__.py  fixed.py  strategy.py  vad.py
tests/: test_audio_capture.py  test_config.py  test_ipc_server.py  test_logging_setup.py  test_main.py  test_output_handler.py  test_pipeline_manager.py  test_segmentation.py  test_state.py  test_strategies.py  test_task_assembler.py  test_transcriber.py  test_vad_states.py
