[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "handsfreed"
version = "0.1.0"
description = "Handsfree speech-to-text daemon for Linux"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",  
    "sounddevice", 
    "numpy",
    "faster-whisper",
    "asyncio"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"