[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "handsfreed"
version = "0.1.0"
description = "Handsfree speech-to-text daemon for Linux"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "faster-whisper>=1.0",
    "onnxruntime>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
]

[project.scripts]
handsfreed = "handsfreed.main:run"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"