[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "handsfreed"
version = "0.1.0"
description = "Handsfree speech-to-text daemon for Linux"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sounddevice>=0.5",
    "numpy>=2.2",
    "faster-whisper>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
]

[project.scripts]
handsfreed = "handsfreed.main:run"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
